refactor init scripts, +supabase, +connection details in test app, +more

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -5,4 +5,8 @@ url = "postgresql://postgres:postgres@localhost:2345/test"
 url = "mysql://root:root@localhost:6033/TEST"
 
 [connections.sqlite]
-url = "sqlite:///sqlite/test.db"
+url = "sqlite:///sqlite/test.sqlite"
+
+[connections.supabase]
+SUPABASE_URL = "https://<myprojecturl>.supabase.co"
+SUPABASE_KEY = "<mykey>"
