--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,14 @@ services:
     ports:
       - "2345:5432"
     environment:
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_HOST_AUTH_METHOD: md5
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?err}  # Fail if not set
+      POSTGRES_HOST_AUTH_METHOD: scram-sha-256
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -p 5432"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   mysql:
     build:
       context: ./mysql
@@ -21,6 +27,12 @@ services:
     ports:
       - "6033:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: root
-
-   
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?err}  # Fail if not set
+      MYSQL_DATABASE: TEST
+      MYSQL_CHARACTER_SET_SERVER: utf8mb4
+      MYSQL_COLLATION_SERVER: utf8mb4_unicode_ci
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-P", "3306", "-u", "root", "--password=$${MYSQL_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
